test/samples/invalid/macro.good_fun_arg_type.sol
/// #macro foo();
contract Foo {
	function foo(uint x, uint y) public {}
}
